istio/istio-subdomain-routing/istio-subdomain-routing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway-configuration
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*.youngnam.com"
        - "youngnam.com"   # 외부로 노출되는 도메인 네임 DNS
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: a-set-of-routing-rules-virtual-service # Virtual Service 이름을 작성한다.
  namespace: default
spec:
  hosts:
    - "youngnam.com" # gateway DNS를 여기에 copy해서 넣어야한다.
  gateways:
    - ingress-gateway-configuration
  http:
    - route:
        - destination:
          host: python-service.default.svc.cluster.local
          subset: safe
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: a-set-of-routing-rules-virtual-service # Virtual Service 이름을 작성한다.
  namespace: default
spec:
  hosts:
    - "*.youngnam.com" # gateway DNS를 여기에 copy해서 넣어야한다.
  gateways:
    - ingress-gateway-configuration
  http:
    - route:
        - destination:
          host: python-service.default.svc.cluster.local
          subset: risky
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: python-service-service-destination
  namespace: default
spec:
  host: python-service # Service
  subsets:
    - labels:  # Selector
        version: safe # 파드의 label "safe"
      name: safe
    - labels:
        version: risky # 파드의 label "risky"
      name: risky
